--- a/스프링-시큐리티/스프링시큐리티.md
+++ b/스프링-시큐리티/스프링시큐리티.md
@@ -153,7 +153,10 @@ PasswordEncoder라는 인터페이스의 구현체로 BCryptPasswordEncoder, Arg
 ======================================================================================
 스텝 9.
 
-### 이제 DB와 연결하여 시큐리티를 커스텀마이징 하여 보자
+### 이제 DB와 연결하여 시큐리티를 커스텀 마이징 하여 보자.
+
+
+
 	
 	
 	
