--- a/스프링-시큐리티/스프링시큐리티.md
+++ b/스프링-시큐리티/스프링시큐리티.md
@@ -242,3 +242,14 @@ https://luckyguystory.tistory.com/208 -> 참고
 	
 
 ====================================================================================================
+
+스프링 시큐리티 결론 3가지
+1. 인증과 권한을 다루는 라이브러리
+2. 암호화 모듈 제공(공짜로)
+3. CSRF 및 기본적인 해킹 공격(XSS등등)을 막아줌
+
+
+
+
+
+
